--- a/src/index.scss
+++ b/src/index.scss
@@ -18,12 +18,12 @@ textarea {
 }
 
 textarea {
-  min-height: 70px;
-  background: #000;
+min-height: 70px;
+background: #000;
 }
 
 .inputArea {
   display: flex;
   flex-direction: column;
   gap: 20px;
-}/*# sourceMappingURL=index.css.map */
+}
