--- a/src/style/index.css
+++ b/src/style/index.css
@@ -1,7 +1,12 @@
-.box {
-  border: 1px solid #333;
-  padding: 20px;
+@charset "UTF-8";
+.bg-gray {
+  background: #f0efef;
+}
+
+body {
   font-size: 20px;
+  color: #333;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Hiragino Sans", "ヒラギノ角ゴ ProN", "Noto Sans JP", "YuGothic", "游ゴシック体", sans-serif;
 }
 
 .inner {
@@ -9,13 +14,86 @@
   margin: 0 auto;
 }
 
-input,
-textarea {
-  border: 1px solid #656464;
-  padding: 10px 20px;
-  border-radius: 3px;
-}
-
 textarea {
   min-height: 70px;
+}
+
+.contentsWrap {
+  display: grid;
+  grid-template-columns: 5fr 2fr;
+}
+
+.contents {
+  margin: 0.5rem;
+  padding: 1rem;
+  border: 0.05rem solid #a6a5a5;
+  border-radius: 0.5rem;
+}
+
+/*------------------------ partsList -------------------- */
+.partsList_item {
+  border: 1px solid #333;
+}
+.partsList_item .part {
+  position: relative;
+  min-height: 4rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.partsList_item .partBtns {
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+.partsList_item .partBtns button {
+  border: solid 1px #333;
+  width: 2rem;
+  height: 1.5rem;
+}
+
+/*------------------------ inputArea -------------------- */
+.inputArea {
+  display: flex;
+  flex-direction: column;
+}
+.inputArea input,
+.inputArea textarea {
+  border: none;
+  padding: Í10px 20px;
+  border-radius: 0.5rem;
+}
+
+/*------------------------ frameList -------------------- */
+.frameList_item {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: inset -2px -2px 2px #dcdada;
+  font-size: 0.9rem;
+  width: 100%;
+  position: relative;
+  min-height: 3rem;
+  border: 0.05rem solid #a6a5a5;
+  border-radius: 2rem;
+  background: #fff;
+}
+.frameList_item::before {
+  box-shadow: -2px -2px 2px #dcdada;
+  position: absolute;
+  content: "";
+  top: 50%;
+  left: 1rem;
+  transform: translateY(-50%);
+  background: #d4d4d4;
+  width: 0.9rem;
+  height: 0.9rem;
+  border-radius: 50%;
+  border: 0.05rem solid #a6a5a5;
+}
+.frameList_item.is-active::before {
+  background: #f8defb;
+}
+.frameList_item + .frameList_item {
+  margin-top: 1rem;
 }/*# sourceMappingURL=index.css.map */
