--- a/src/style/_usage.scss
+++ b/src/style/_usage.scss
@@ -2,18 +2,16 @@
     background: #f0efef;
 }
 
-
-
 @mixin flexCenter() {
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-@mixin shadow($type) {
+@mixin boxShadow($type) {
     @if $type == base {
         box-shadow: -2px -2px 2px #dcdada;
     } @else if $type == inset {
-        box-shadow: inset -2px -2px 2px #dcdada;
+        box-shadow: inset -2px -2px 0 #dcdada;
     }
 }
